# actix-lightspark

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20231228160534_plaiduser.sql
scripts/: init_db.sh
src/: config.rs  error.rs  main.rs  plaid.rs
