[package]
name = "actix-lightspark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.75"
dotenv = "0.15.0"
lightspark = { path = "../../lightspark" }
reqwest = "0.11.23"
secrecy = "0.8.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.51"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
